The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/05/18 10:55:00 CDT
Tag: blume-20050518-realdiv-noovld
Description:

Un-overloaded / to work around bug in overloading resolution code.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/05/16 23:50:00 CDT
Tag: blume-20050516-redump-heap
Description:

Added mechanism for re-creating a heap file for the interactive system
after configuration variables have been changed.

   CM.redump_heap : string -> unit

This is much like SMLofNJ.exportML, but starting from the resulting
heap does not return to the caller of CM.redump_heap but 
restarts the interactive system from scratch.  The original call of
CM.redump_heap does not return but ends the interactive session.
Thus, CM.redump_heap is a lot like SMLofNJ.exportFn.

Internally, redump_heap winds the dynamic execution context back to
the point where the original heap image was created and re-executes
the heap image generation code in the boot code.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/05/09 21:55:00 CDT
Tag: blume-20050509-word64
Description:

Added a hack to the existing hack known as Word64 to make fromString
behave correctly.  I am still not sure whether Word64.scan will work
as specified with respect to the interaction of radix and prefix.

----------------------------------------------------------------------
Name: Allen Leung (leunga (at) reservoir (dot) com)
Date: 2005/05/04 11:50:00 EST
Tag: leunga-20050504-checkgc
Description:
