@@ -14,6 +14,16 @@ Description:
 
 ----------------------------------------------------------------------
 Name: Matthias Blume (blume (at) tti - c (dot) org)
+Date: 2005/05/18 11:58:00 CDT
+Tag: blume-20050518-installer
+Description:
+
+Added support scripts for Mac OS X PackageMaker and modified
+config/install.sh so that it supports re-dumping a heap image
+after customization.
+
+----------------------------------------------------------------------
+Name: Matthias Blume (blume (at) tti - c (dot) org)
 Date: 2005/05/18 10:55:00 CDT
 Tag: blume-20050518-realdiv-noovld
 Description:
